# global-cot-analysis

./: .gitignore  CLAUDE.md  README.md  VISUALIZATION_ISSUES.md  presentation.html  pyproject.toml
configs/: CLAUDE.md  faith_combined.yaml  faith_combined_chunked_pn277.yaml  faith_combined_chunked_pn339.yaml  faith_combined_chunked_pn37.yaml  faith_combined_chunked_pn408.yaml  faith_combined_pn277.yaml  faith_combined_pn37.yaml  faith_combined_pn408.yaml  faith_cued.yaml  faith_cued_pn119.yaml  faith_cued_pn145.yaml  faith_cued_pn19.yaml  faith_cued_pn198.yaml  faith_cued_pn212.yaml  faith_cued_pn215.yaml  faith_cued_pn26.yaml  faith_cued_pn277.yaml  faith_cued_pn277_oos.yaml  faith_cued_pn288.yaml  faith_cued_pn295.yaml  faith_cued_pn309.yaml  faith_cued_pn324.yaml  faith_cued_pn339.yaml  faith_cued_pn340.yaml  faith_cued_pn369.yaml  faith_cued_pn37.yaml  faith_cued_pn371.yaml  faith_cued_pn37_oos.yaml  faith_cued_pn382.yaml  faith_cued_pn408.yaml  faith_cued_pn408_oos.yaml  faith_cued_pn418.yaml  faith_cued_pn430.yaml  faith_cued_pn432.yaml  faith_cued_pn440.yaml  faith_cued_pn459.yaml  faith_cued_pn474.yaml  faith_cued_pn479.yaml  faith_cued_pn499.yaml  (+64 more)
deployment/: .vercelignore  CLAUDE.md  MULTI_ALGORITHM_EXPLANATION.md  README.md  next.config.js  package-lock.json  package.json  start-dev.sh  tsconfig.json  vercel.json
graph_layout_service/: app.py  requirements.txt
plan/: README.md  viz-improvements-pn277.md
prompts/: faith_metadata.json  prompts.json  summary.json
results/: cluster_inspector.html  plot_gap_vs_unfaithfulness.py  verification_viewer.html  (+3 more)
(+5493 files in other folders)
