[project]
name = "global-cot-analysis"
version = "0.1.0"
description = "Clustering and analysis system for Chain-of-Thought reasoning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Configuration management
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    
    # Machine learning and clustering
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    
    # Graph algorithms and community detection
    "python-igraph>=0.11.0",
    "leidenalg>=0.9.0",
    
    # Parallel processing and utilities
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    
    # API and HTTP
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    
    # Data formats
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # Graph visualization (note: requires system Graphviz libraries)
    "pygraphviz>=1.11",
    
    # Pydantic for FastAPI models
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
